--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="pref_units_metric" translatable="false">Metric</string>
     <string name="pref_units_imperial" translatable="false">Imperial</string>
 
+    //string for "share" in the menu in the DetailActivity
+    <string name="detail_menu_share">Share</string>
+
+
 
 
 
