--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
 <resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 
 
-<!--
-         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
-         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
-         or something similar.
-    -->
+    <!--
+             Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
+             It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
+             or something similar.
+        -->
     <string name="app_name">Sunshine</string>
 
     <!--
@@ -59,7 +59,25 @@
     <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
     <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
 
-    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
+    <!-- Strings for formatting weather-related data -->
+    <!-- Temperature format [CHAR LIMIT=5] -->
     <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
+
+    <!-- Windspeed formats -->
+    <!-- Wind in mph [CHAR LIMIT=25] -->
+<string name="format_wind_mph">
+    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
+</string>
+
+    <!-- Wind in kph [CHAR LIMIT=25] -->
+<string name="format_wind_kmh">
+    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
+</string>
+
+    <!-- Pressure format CHAR LIMIT=25] -->
+    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
+
+    <!-- Humidity format CHAR LIMIT=25]-->
+    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
 
 </resources>
