--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_location_key" translatable="false">location</string>
 
+    <!-- Key name for storing location status in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_status_key" translatable="false">loc-status</string>
+
     <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
     <string name="pref_location_default" translatable="false">97224</string>
 
@@ -98,5 +101,11 @@
     <string name="pref_enable_notifications_true">Enabled</string>
     <string name="pref_enable_notifications_false">Not Enabled</string>
     <string name="pref_enable_notifications_default" translatable="false">true</string>
+
+
+    <string name="empty_weather_data_string">No weather data available</string>
+
+    <string name="no_network_string">No weather data available. The network is not available to fetch weather data or you do not have internet access</string>
+
 
 </resources>
