--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,9 +103,11 @@
     <string name="pref_enable_notifications_default" translatable="false">true</string>
 
 
-    <string name="empty_weather_data_string">No weather data available</string>
-
-    <string name="no_network_string">No weather data available. The network is not available to fetch weather data or you do not have internet access</string>
+    <string name="empty_forecast_list">No weather data available. The network is not available to fetch weather data</string>
+    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to retrieve weather data.</string>
+    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
+    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
+    <string name="empty_forecast_list_invalid_location">No weather information available. The location in this setting is not recognized by the weather server</string>
 
 
 </resources>
