--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,4 +211,10 @@
 
     <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
     <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
+
+
+    <!--transition strings-->
+    <string name="detail_icon_transiton_name" translatable="false">TN_DetailIcon</string>
+
+
 </resources>
