Place picker is now not working- this is the error I get
Process: com.example.android.sunshine.app, PID: 6190
                                                 android.database.CursorIndexOutOfBoundsException: Index 0 requested, with a size of 0
                                                     at android.database.AbstractCursor.checkPosition(AbstractCursor.java:460)
                                                     at android.database.AbstractWindowedCursor.checkPosition(AbstractWindowedCursor.java:136)
                                                     at android.database.AbstractWindowedCursor.getString(AbstractWindowedCursor.java:50)
                                                     at android.database.CursorWrapper.getString(CursorWrapper.java:137)
                                                     at com.example.android.sunshine.app.ForecastFragment.openPreferredLocationInMap(ForecastFragment.java:269)
                                                     at com.example.android.sunshine.app.ForecastFragment.onOptionsItemSelected(ForecastFragment.java:135)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,5 +216,11 @@
     <!--transition strings-->
     <string name="detail_icon_transiton_name" translatable="false">TN_DetailIcon</string>
 
+    <!-- Content description for the get current location button in the location preference -->
+    <string name="pref_current_location_desc">Use my location</string>
+
+    <string name="pref_location_latitutde" translatable="false">loc-latitude</string>
+    <string name="pref_location_longitude" translatable="false">loc-longitude</string>
+
 
 </resources>
