--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,8 +115,7 @@
     Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
     </string>
     <!-- Strings related to Notification preference -->
-    <string name="pref_last_notification">last_notification
-    </string>
+    <string name="pref_last_notification">last_notification</string>
 
     <!-- Strings related to Notification Enabled preference -->
     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
@@ -222,6 +221,8 @@
     <string name="pref_location_latitude" translatable="false">loc-latitude</string>
     <string name="pref_location_longitude" translatable="false">loc-longitude</string>
 
+    <!--Widget-->
+    <string name="title_widget_today">Today</string>
 
 
 </resources>
