--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,8 +221,11 @@
     <string name="pref_location_latitude" translatable="false">loc-latitude</string>
     <string name="pref_location_longitude" translatable="false">loc-longitude</string>
 
-    <!--Widget-->
-    <string name="title_widget_today">Today</string>
+    <!-- Strings related to Widgets -->
+    <string name="title_widget_today">Sunshine Today</string>
+    <string name="title_widget_detail">Sunshine Details</string>
+
+
 
 
 </resources>
